zero-schema-macros/tests/ui/fail/21_collision_schema_stride.rs
use zero_schema_macros::zero;

#[zero]
struct SchemaStrideCollision {
    SCHEMA_STRIDE: u8,
}

fn main() {}
